# opennote

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
examples/: README.md  chat_with_notebook.py  streamlit_app.py
notebooks/first_notebook/: metadata.json
notebooks/first_notebook/chromadb/: chroma.sqlite3
src/opennote/: agent.py  cli.py  config.py  main.py  notebook_manager.py  pdf_processor.py  vector_store.py
src/opennote.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_config.py  test_notebook_manager.py  test_pdf_processor.py  test_vector_db.py
